--- a/themes/tale-theme/layouts/partials/header.html
+++ b/themes/tale-theme/layouts/partials/header.html
@@ -2,6 +2,7 @@
 			<div class="nav-container">
 				<a href="{{ "/" | relURL }}">
 					<h1 class="nav-title">{{ .Site.Title }}</h1>
+					<h3 class="nav-title">Designer &amp; Engineer</h3>
 				</a>
 				{{ partial "header-menu.html" . }}
 			</div>
