--- a/themes/tale-theme/assets/scss/tale/_base.scss
+++ b/themes/tale-theme/assets/scss/tale/_base.scss
@@ -81,7 +81,7 @@ p {
 }
 
 a {
-  text-decoration: underline;
+  text-decoration: none;
   color: inherit;
   opacity: 1;
   transition: opacity .2s ease;
