--- a/themes/tale-theme/assets/scss/tale/_post.scss
+++ b/themes/tale-theme/assets/scss/tale/_post.scss
@@ -40,6 +40,7 @@
     justify-content: center;
     a {
         padding-bottom: 1.5rem;
+        text-decoration: underline;
     }
     :last-child {
         margin-bottom: 0;
