--- a/themes/tale-theme/layouts/partials/single/post-info.html
+++ b/themes/tale-theme/layouts/partials/single/post-info.html
@@ -3,4 +3,7 @@
     {{- if .PublishDate }}
         <h3><time datetime="{{ .PublishDate }}">{{ i18n "publishdate" . }}</time></h3>
     {{- end }}
+    {{- if .ProjectTags }}
+        <h3>datetime="{{ .ProjectTags }}">{{ i18n "project_tags" . }}</h3>
+    {{- end }}
 </div>
