update char format

--- a/themes/tale-theme/layouts/_default/summary.html
+++ b/themes/tale-theme/layouts/_default/summary.html
@@ -5,7 +5,7 @@
         <h3 class="catalogue-time">
             {{ i18n "publishdate" . }}
             {{ range .Params.project_tags }}
-                <span> • {{ . }} </span>
+                <span> · {{ . }} </span>
             {{ end }}
         <p class="catalogue-summary">
             {{ if isset .Params "summary" }}{{ .Params.Summary }}{{ else }}{{  truncate 180 .Summary }}{{ end }}
