--- a/themes/tale-theme/layouts/index.html
+++ b/themes/tale-theme/layouts/index.html
@@ -10,6 +10,8 @@
 			{{ end }}
 		</div>
 	</div>
+	<script type="text/javascript" src="/js/lightbox.js"></script>
+	<link rel="stylesheet" href="/css/lightbox.css">
 </main>
 
 {{ end }}
