--- a/themes/tale-theme/layouts/_default/single.html
+++ b/themes/tale-theme/layouts/_default/single.html
@@ -24,6 +24,8 @@
 				{{- end }}
 		</div>
 	</div>
+	<script type="text/javascript" src="/js/lightbox.js"></script>
+	<link rel="stylesheet" href="/css/lightbox.css">
 </main>
 
 {{ end }}
