underline links on specific pages

--- a/themes/tale-theme/assets/scss/tale/_base.scss
+++ b/themes/tale-theme/assets/scss/tale/_base.scss
@@ -93,6 +93,10 @@ a:hover {
   text-decoration-color: inherit;
 }
 
+.info__post a {
+  text-decoration: underline !important;
+}
+
 ul {
   list-style: none;
   margin: 0;
